--- a/Person_Portfolio/style.css
+++ b/Person_Portfolio/style.css
@@ -2,17 +2,18 @@
    margin: 0;
    padding: 0;
    font-family: sans-serif;
+  
 }
 .hero
 {
     position: relative;
     width: 100%;
     height:100vh;
-    background-color: #fff
+    background-color: #f0ecec;
 }
 nav{
 
-    background-color:whitesmoke;
+    background-color:rgb(148, 146, 146);
     display: flex;
     width: 80%;
     padding: 20px 0;
@@ -170,6 +171,12 @@ nav ul li a:hover{
     font-size: 20px;
     margin-top: 10px;
 }
- 
+.img{
+    border: 2px solid #333;
+    border-radius: 180px;
+    width: 400px;
+    height: 400px;
     
+}
+
     
